libs/internal-dns/tests/internal-dns-basic/01-create-ingress.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
metadata:
  name: create-test-ingress
spec:
  apply:
  - deployment.yaml
