libs/internal-dns/tests/internal-dns-basic/02-create-ingress.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
metadata:
  name: create-test-ingress
spec:
  apply:
  - 02-ingress-test.yaml
