libs/internal-dns/tests/internal-dns-basic/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-dns-test
status:
  readyReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: internal-dns-test
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip
