libs/internal-dns/tests/internal-dns-basic/02-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-dns-test-external-dns
status:
  readyReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
status:
  loadBalancer: {}
